--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <script>
         function openMessenger() {
-            window.location.href = "https://m.me/danter.gaza.1";
+            window.location.href = "fb-messenger://user-thread/danter.gaza.1";
         }
     </script>
 </body>
