--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <script>
         function openMessenger() {
-            window.location.href = "fb-messenger://user-thread/danter.gaza.1";
+            var messengerUrl = "fb://messaging/danter.gaza.1";
+            window.location.href = messengerUrl;
         }
     </script>
 </body>
