--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 
-    <button id="openMessenger">KUPAL KABA BOSS?</button>
+    <button id="openMessenger">Open Messenger (JS)</button>
+    <br><br>
+
+    <!-- Alternative deep link for Android -->
+    <a href="intent://user-thread/100011166947174#Intent;scheme=fb-messenger;package=com.facebook.orca;end;">
+        Open Messenger (Deep Link)
+    </a>
 
     <script src="script.js"></script>
 </body>
