--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
 </head>
 <body>
 
-    <button id="openMessenger">Open Messenger (JS)</button>
-    <br><br>
-
-    <!-- Alternative deep link for Android -->
-    <a href="intent://user-thread/100011166947174#Intent;scheme=fb-messenger;package=com.facebook.orca;end;">
-        Open Messenger (Deep Link)
-    </a>
+    <button id="openMessenger">Open Messenger</button>
 
     <script src="script.js"></script>
 </body>
