--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <button id="openMessenger">Open Messenger</button>
+    <button id="openMessenger">MA ANO ULAM?</button>
 
     <script src="script.js"></script>
 </body>
