--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <a id="messengerLink" href="fb://profile/100011166947174">OMCM</a>
+    <a id="messengerLink" href="fb://profile/100011166947174">Open Messenger</a>
 
     <script>
         window.location.href = "fb://profile/100011166947174";
