--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MA ANO ULAM</title>
+    <title>Open Messenger</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <a id="messengerLink" href="fb://profile/100011166947174">Open Messenger</a>
-
-    <script>
-        window.location.href = "fb://profile/100011166947174";
-        setTimeout(() => {
-            window.location.href = "https://m.me/danter.gaza.1"; // Fallback if app doesn't open
-        }, 2000);
-    </script>
-
+    <button id="openMessenger">Open Messenger</button>
+    <script src="script.js"></script>
 </body>
 </html>
