--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="openMessenger">Open Messenger</button>
+    <button id="openMessenger">Open Messenger Chat</button>
     <script src="script.js"></script>
 </body>
 </html>
