--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="openMessenger">Open Messenger Chat</button>
+    <button id="openMessenger">Open Messenger</button>
     <script src="script.js"></script>
+    <script>
+        document.getElementById("openMessenger").addEventListener("click", function() {
+            window.location.href = "https://www.messenger.com/t/ahsey.embile";
+        });
+    </script>
 </body>
 </html>
