--- a/index.html
+++ b/index.html
@@ -3,84 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Liquidation Form</title>
+  <title>SYSTECH LIQUIDATION SYSTEM</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f0f4f8;
+      margin: 0;
+      padding: 0;
     }
 
     .container {
-      width: 70%;
-      margin: auto;
+      width: 80%;
+      margin: 40px auto;
+      background: #ffffff;
+      padding: 30px;
+      border-radius: 15px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 36px;
+      color: #2c3e50;
+      letter-spacing: 2px;
+      margin-bottom: 30px;
+      text-transform: uppercase;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
+      border-radius: 10px;
+      overflow: hidden;
     }
 
     table, th, td {
-      border: 1px solid black;
+      border: 1px solid #ddd;
     }
 
     th, td {
-      padding: 8px;
+      padding: 12px;
       text-align: center;
       height: 60px;
       vertical-align: middle;
     }
 
     th {
-      background-color: #f2f2f2;
+      background-color: #2c3e50;
+      color: white;
+      text-transform: uppercase;
     }
 
     td:last-child {
-      width: 160px;
+      width: 180px;
     }
 
-    .total-section {
-      margin-top: 20px;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .total-section span {
-      font-weight: bold;
-    }
-
-    button {
-      padding: 8px 16px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #45a049;
+    input[type="text"], input[type="number"] {
+      width: 90%;
+      padding: 6px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
 
     input[type="number"] {
-      width: 80px;
-      padding: 5px;
       text-align: right;
     }
 
+    button {
+      padding: 8px 14px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
     .upload-btn {
-      padding: 5px 10px;
       background-color: #ff9800;
       color: white;
-      border: none;
-      cursor: pointer;
     }
 
     .upload-btn:hover {
       background-color: #f57c00;
-    }
-
-    input[type="file"] {
-      display: none;
     }
 
     .green-btn {
@@ -105,7 +113,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: rgba(0, 0, 0, 0.85);
+      background: rgba(0, 0, 0, 0.9);
       justify-content: center;
       align-items: center;
       z-index: 999;
@@ -122,16 +130,17 @@
       position: absolute;
       top: 20px;
       right: 20px;
-      background-color: red;
+      background-color: #e74c3c;
       color: white;
       border: none;
       padding: 10px;
       cursor: pointer;
       font-size: 18px;
+      border-radius: 8px;
     }
 
     .close-btn:hover {
-      background-color: #cc0000;
+      background-color: #c0392b;
     }
 
     .fullscreen-controls {
@@ -140,18 +149,32 @@
     }
 
     .fullscreen-controls button {
-      background-color: #2196F3;
+      background-color: #2980b9;
+      color: white;
     }
 
     .fullscreen-controls button:hover {
-      background-color: #1976D2;
+      background-color: #1f618d;
+    }
+
+    .total-section {
+      margin-top: 25px;
+      display: flex;
+      justify-content: space-between;
+      font-size: 18px;
+      font-weight: bold;
+      color: #34495e;
+    }
+
+    input[type="file"] {
+      display: none;
     }
   </style>
 </head>
 <body>
 
 <div class="container">
-  <h2>Liquidation Form</h2>
+  <h2>SYSTECH LIQUIDATION SYSTEM</h2>
 
   <form id="liquidationForm">
     <table id="travelTable">
