--- a/index.html
+++ b/index.html
@@ -200,11 +200,20 @@
     input[type="file"] {
       display: none;
     }
+
+  .header-img {
+  width: 100%;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
   </style>
 </head>
 <body>
 
 <div class="container">
+  <img src="https://github.com/dandan-187/button/raw/main/SLS%20BG.jpeg" alt="SLS Header" class="header-img">
+
   <h2>SYSTECH LIQUIDATION SYSTEM</h2>
 
   <div class="info-section">
