--- a/index.html
+++ b/index.html
@@ -203,8 +203,12 @@
 
   .header-img {
   width: 100%;
+  height: 50px; /* You can adjust this value */
+  object-fit: cover;
   border-radius: 20px;
   margin-bottom: 20px;
+}
+
 }
 
   </style>
