--- a/index.html
+++ b/index.html
@@ -5,212 +5,213 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>SYSTECH LIQUIDATION SYSTEM</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f0f4f8;
-      margin: 0;
-      padding: 0;
-    }
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f0f4f8;
+    margin: 0;
+    padding: 0;
+  }
 
-    .container {
-      width: 80%;
-      margin: 40px auto;
-      background: #ffffff;
-      padding: 30px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-    }
+  .container {
+    width: 80%;
+    margin: 40px auto;
+    background: #ffffff;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  }
 
-    h2 {
-      text-align: center;
-      font-size: 36px;
-      color: #2c3e50;
-      letter-spacing: 2px;
-      margin-bottom: 20px;
-      text-transform: uppercase;
-    }
+  h2 {
+    text-align: center;
+    font-size: 36px;
+    color: #2c3e50;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+  }
 
-    .info-section {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 10px;
-    }
+  .info-section {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
 
-    .info-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
+  .info-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 30px;
+  }
 
-    .info-item {
-      display: flex;
-      flex-direction: column;
-    }
+  .info-group .info-item input {
+    width: 140px; /* adjusted to fit in one row */
+  }
 
-    .info-item label {
-      font-size: 14px;
-      color: #34495e;
-      margin-bottom: 4px;
-    }
+  .info-item {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .info-item input {
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      width: 180px;
-    }
+  .info-item label {
+    font-size: 14px;
+    color: #34495e;
+    margin-bottom: 4px;
+  }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      border-radius: 10px;
-      overflow: hidden;
-    }
+  .info-item input {
+    padding: 6px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
 
-    table, th, td {
-      border: 1px solid #ddd;
-    }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 10px;
+    overflow: hidden;
+  }
 
-    th, td {
-      padding: 12px;
-      text-align: center;
-      height: 60px;
-      vertical-align: middle;
-    }
+  table, th, td {
+    border: 1px solid #ddd;
+  }
 
-    th {
-      background-color: #2c3e50;
-      color: white;
-      text-transform: uppercase;
-    }
+  th, td {
+    padding: 12px;
+    text-align: center;
+    height: 60px;
+    vertical-align: middle;
+  }
 
-    td:last-child {
-      width: 180px;
-    }
+  th {
+    background-color: #2c3e50;
+    color: white;
+    text-transform: uppercase;
+  }
 
-    input[type="text"], input[type="number"] {
-      width: 90%;
-      padding: 6px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
+  td:last-child {
+    width: 180px;
+  }
 
-    input[type="number"] {
-      text-align: right;
-    }
+  input[type="text"], input[type="number"] {
+    width: 90%;
+    padding: 6px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
 
-    button {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
+  input[type="number"] {
+    text-align: right;
+  }
 
-    button:hover {
-      opacity: 0.9;
-    }
+  button {
+    padding: 8px 14px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+  }
 
-    .upload-btn {
-      background-color: #ff9800;
-      color: white;
-    }
+  button:hover {
+    opacity: 0.9;
+  }
 
-    .upload-btn:hover {
-      background-color: #f57c00;
-    }
+  .upload-btn {
+    background-color: #ff9800;
+    color: white;
+  }
 
-    .green-btn {
-      background-color: #4CAF50 !important;
-      color: white;
-    }
+  .upload-btn:hover {
+    background-color: #f57c00;
+  }
 
-    .uploaded-info {
-      display: none;
-      align-items: center;
-      justify-content: center;
-    }
+  .green-btn {
+    background-color: #4CAF50 !important;
+    color: white;
+  }
 
-    .uploaded-img {
-      display: none;
-    }
+  .uploaded-info {
+    display: none;
+    align-items: center;
+    justify-content: center;
+  }
 
-    .fullscreen-img {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.9);
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-      flex-direction: column;
-    }
+  .uploaded-img {
+    display: none;
+  }
 
-    .fullscreen-img img {
-      max-width: 90%;
-      max-height: 80%;
-      margin-bottom: 20px;
-    }
+  .fullscreen-img {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    flex-direction: column;
+  }
 
-    .close-btn {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      background-color: #e74c3c;
-      color: white;
-      border: none;
-      padding: 10px;
-      cursor: pointer;
-      font-size: 18px;
-      border-radius: 8px;
-    }
+  .fullscreen-img img {
+    max-width: 90%;
+    max-height: 80%;
+    margin-bottom: 20px;
+  }
 
-    .close-btn:hover {
-      background-color: #c0392b;
-    }
+  .close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 18px;
+    border-radius: 8px;
+  }
 
-    .fullscreen-controls {
-      display: flex;
-      gap: 10px;
-    }
+  .close-btn:hover {
+    background-color: #c0392b;
+  }
 
-    .fullscreen-controls button {
-      background-color: #2980b9;
-      color: white;
-    }
+  .fullscreen-controls {
+    display: flex;
+    gap: 10px;
+  }
 
-    .fullscreen-controls button:hover {
-      background-color: #1f618d;
-    }
+  .fullscreen-controls button {
+    background-color: #2980b9;
+    color: white;
+  }
 
-    .total-section {
-      margin-top: 25px;
-      display: flex;
-      justify-content: space-between;
-      font-size: 18px;
-      font-weight: bold;
-      color: #34495e;
-    }
+  .fullscreen-controls button:hover {
+    background-color: #1f618d;
+  }
 
-    input[type="file"] {
-      display: none;
-    }
+  .total-section {
+    margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: bold;
+    color: #34495e;
+  }
+
+  input[type="file"] {
+    display: none;
+  }
 
   .header-img {
-  width: 100%;
-  height: 120px; /* You can adjust this value */
-  border-radius: 20px;
-  margin-bottom: 20px;
-}
+    width: 100%;
+    height: 120px; /* You can adjust this value */
+    border-radius: 20px;
+    margin-bottom: 20px;
+  }
+</style>
 
-}
-
-  </style>
 </head>
 <body>
 
