--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
   }
 
   .info-group .info-item input {
-    width: 140px; /* adjusted to fit in one row */
+    width: 140px;
+  }
+
+  /* From and To input width override */
+  input[name="from"],
+  input[name="to"] {
+    width: 180px !important;
   }
 
   .info-item {
@@ -206,11 +212,12 @@
 
   .header-img {
     width: 100%;
-    height: 120px; /* You can adjust this value */
+    height: 120px;
     border-radius: 20px;
     margin-bottom: 20px;
   }
 </style>
+
 
 </head>
 <body>
